# quodpot-game

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/Duels/: DuelArenaScreen.jsx  DuelJoinScreen.jsx  DuelPlayer.jsx  DuelResultScreen.jsx  DuelWaitingScreen.jsx  DuelsGame.jsx  OpponentSpellDisplay.jsx  RoundHistory.jsx  ScoreDisplay.jsx  SpellButton.jsx  SpellCard.jsx  SpellDuelArena.jsx  SpellPicker.jsx  SpellRevealComparison.jsx  SpellStatus.jsx  VSBadge.jsx  index.js
frontend/src/components/Game/: AttemptsDisplay.jsx  HangmanGame.jsx  Keyboard.jsx  QuodBall.css  QuodBall.jsx  WordDisplay.jsx  index.js
frontend/src/components/Layout/: GameLayout.jsx
frontend/src/components/Screens/: GameOverOverlay.jsx  GameSelector.jsx  JoinScreen.jsx  WaitingScreen.jsx  index.js
frontend/src/context/: GameContext.jsx
frontend/src/hooks/: useWebSocket.js
src/: config.py  main.py
src/data/: words.txt
src/games/duels/: __init__.py  events.py  manager.py  messages.py  models.py  pve_service.py  spell_strategy.py
src/games/hangman/: events.py  manager.py  messages.py  models.py
src/models/: __init__.py  base.py  game.py  messages.py  player_protocol.py  player_wrapper.py
src/services/: __init__.py  game_manager.py  matchmaking.py  word_bank.py
src/static/: index.html
src/websocket/: __init__.py  events.py  handler.py  router.py
tests/: test_duels.py  test_game.py  test_pve_integration.py
(+17 files in other folders)
